k8s/users/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: users
