k8s/users/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: users-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /api/users
            pathType: "Prefix"
            backend:
              service:
                name: users-service
                port:
                  number: 80
